--- a/week-1/style/style.css
+++ b/week-1/style/style.css
@@ -30,6 +30,7 @@ body{
     position: fixed;
     top: 0;
     background-color: #d0dcf5;
+    z-index: 1;
 }
 .item{
     width: 300px;
@@ -101,27 +102,41 @@ body{
 }
 .box2{
     width:285px;
-    height: 320px;
+    height: 285px;
     background-color: aqua;
     margin:auto ;
     margin-bottom: 20px;
+    position: relative;
+}
+.star-icon{
+    max-width: 30px;
+    width: 100%;
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 5px;
 }
 .box2-pic-container{
     width: 100%;
     height: auto;
     display:block;
-    float: left;
+    /*float: left;*/
 }
 .box2-pic{
     width:100%;
     height:100%;
 }
 .box2-text{
+    display: inline;
     width: 100%;
     padding-bottom: 5px;
     text-align: center;
-    background-color: #FFF2CC;
+    background-color: white;
+    opacity: .8;
     color: #595959;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 @media screen and (max-width:1200px) and (min-width:600px){
     .hamburger{
@@ -151,6 +166,11 @@ body{
         margin: auto;
         margin-bottom: 35px;
     }
+    .box2-pic{ 
+        max-width:100%;
+        max-height:110%;
+    }
+
 }
 @media screen and (max-width:600px) and (min-width:360px){
     .header{
