--- a/week-1/style/style.css
+++ b/week-1/style/style.css
@@ -108,14 +108,6 @@ body{
     margin-bottom: 20px;
     position: relative;
 }
-.star-icon{
-    max-width: 30px;
-    width: 100%;
-    display: block;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-}
 .box2-pic-container{
     width: 100%;
     height: auto;
@@ -123,20 +115,28 @@ body{
     /*float: left;*/
 }
 .box2-pic{
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
 }
 .box2-text{
     display: inline;
     width: 100%;
     padding-bottom: 5px;
     text-align: center;
-    background-color: white;
+    background-color: rgb(231, 145, 145);
     opacity: .8;
     color: #595959;
     position: absolute;
     bottom: 0;
     right: 0;
+}
+.star-icon{
+    max-width: 30px;
+    width: 100%;
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 5px;
 }
 @media screen and (max-width:1200px) and (min-width:600px){
     .hamburger{
@@ -166,11 +166,9 @@ body{
         margin: auto;
         margin-bottom: 35px;
     }
-    .box2-pic{ 
-        max-width:100%;
-        max-height:110%;
+    .box2-pic{
+        display: block;
     }
-
 }
 @media screen and (max-width:600px) and (min-width:360px){
     .header{
@@ -256,7 +254,6 @@ body{
         margin-bottom: 30px;
     }
     .box2-pic{ 
-        width:100%;
-        height:100%;
+        display: block;
     }
 }
