--- a/week-1/style/style.css
+++ b/week-1/style/style.css
@@ -103,7 +103,6 @@ body{
 .box2{
     width:285px;
     height: 285px;
-    background-color: aqua;
     margin:auto ;
     margin-bottom: 20px;
     position: relative;
@@ -123,7 +122,7 @@ body{
     width: 100%;
     padding-bottom: 5px;
     text-align: center;
-    background-color: rgb(231, 145, 145);
+    background-color: white;
     opacity: .8;
     color: #595959;
     position: absolute;
