--- a/week-3/style/style.css
+++ b/week-3/style/style.css
@@ -110,13 +110,27 @@ body{
     margin:auto ;
     margin-bottom: 50px;
     position: relative;
+    display: none;
 }
 .box2-pic-container{
     width: 100%;
     height: 100%;
-    display:block;
+    
+    /*display:block;*/
     /*float: left;*/
 }
+
+.box2:nth-child(1),
+.box2:nth-child(2),
+.box2:nth-child(3),
+.box2:nth-child(4),
+.box2:nth-child(5),
+.box2:nth-child(6),
+.box2:nth-child(7),
+.box2:nth-child(8){
+    display: block;
+}
+
 .box2-pic{
     width: 100%;
     height: 100%;
@@ -139,6 +153,25 @@ body{
     right: 0;
     margin-bottom: -30px;
 }
+.load-more-container{
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    
+}
+.load-more{
+    box-sizing: border-box;
+    margin: auto;
+    border: 2px rgb(92, 92, 92);
+    background-color: #d7d2d2;
+    color: gray;
+    padding: 5px 15px;
+    border-radius: 5px;
+    font-family: 'Caveat Brush', cursive;
+}
+.load-more:hover{
+    color: #3366CC;
+    cursor:pointer;
 /*.star-icon{
     max-width: 30px;
     width: 100%;
