--- a/week-4/static/css/index.css
+++ b/week-4/static/css/index.css
@@ -56,12 +56,12 @@ body {
 .form .box1{
     margin-bottom: 20px;
 }
-.form label{
+label{
     line-height: 2;
     font-family: "NOTO Sans TC", san-serif;
     font-size: 20px;
 }
-.form input{
+input{
     width: 100%;
     border:1px solid #aaa;
     line-height: 2;
@@ -142,7 +142,7 @@ body {
   background-color: transparent;
 }
 
-.square{
+.input{
     width: 600px;
     height: 300px;
     background-color: #aaa694;
@@ -151,15 +151,12 @@ body {
     box-shadow: 0 0 60px #f6f1d1;
     backdrop-filter:blur(5px);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #fff;
     margin-top: 20px;
 }
-.form .square-title{
-    margin-bottom: 20px;
-    margin-left: 100px;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: "NOTO Sans TC", san-serif;
+.box2-input{
+  margin-top: 40px;
 }
